# mental

./: .claude.md  .gitignore  CMakeLists.txt  Makefile  README.md  api.go  backend.go  backend_auto.go  backend_auto_darwin.go  backend_auto_linux.go  backend_auto_windows.go  backend_d3d11.cpp  backend_d3d12.cpp  backend_d3d12.go  backend_d3d12_windows.cpp  backend_d3d12_windows.h  backend_metal.go  backend_metal.m  backend_opencl.c  backend_opencl.cpp  backend_opencl.go  backend_opengl.c  backend_pocl.c  backend_vulkan.cpp  backend_vulkan.go  backend_webgpu.c  device.go  device_test.go  doc.go  ensure_external.go  example.c  factories.go  fetch_external.go  go.mod  init.go  kernel.go  libmental.h  license  mental.c  mental.h  (+25 more)
.github/workflows/: release.yml  test-matrix.yml  test.yml
api/: api.go
capi/: capi.go  enigmatic.h  main.go
examples/: 00-device-info.c  01-reference.c  02-gpu-compute.c  03-clone-and-pin.c  04-state.c  05-pipe.c  README.md
examples/00_simple_compute/c/: 00_simple_compute.c  Makefile
examples/00_simple_compute/go/: main.go
examples/01_observable_refs/c/: 01_observable_refs  01_observable_refs.c  Makefile
examples/01_observable_refs/go/: main.go
examples/02_cross_language_shaders/c/: 02_cross_language_shaders  02_cross_language_shaders.c  Makefile
examples/02_cross_language_shaders/go/: main.go
examples/03_mutable_references/c/: 03_mutable_references  03_mutable_references.c  Makefile
examples/03_mutable_references/go/: main.go
examples/test/: cross_language_shaders_test.go  mutable_references_test.go  observable_refs_test.go  simple_compute_test.go
go/: call.go  cgo.go  cgo_unix.go  cgo_windows.go  embed.go  embed_tools.go  epiphany.go  go.mod  lifecycle.go  lifecycle_unix.go  lifecycle_windows.go  link.go  loader.go  manifest.go  matrix.go  mental.go  mental_test.go  monotonic.go  monotonic_test.go  open_darwin.go  open_linux.go  open_unix.go  open_windows.go  ref.go  reference.go  reference_test.go  shim_darwin_amd64.s  shim_darwin_arm64.s  shim_linux_amd64.s  shim_linux_arm64.s  shim_windows_amd64.s  shim_windows_arm64.s  spark.go  spark_test.go  state.go  state_test.go  stdlink.go  stdlink_test.go  stdrec.go  tools.go  (+2 more)
go/examples/00-spark-link/: .gitignore  go.mod  main.go
go/examples/01-peer-link/: go.mod  main.go
go/examples/02-disclosure/: go.mod  main.go
go/examples/03-gpu-compute/: go.mod  main.go
go/examples/04-process-tree/: go.mod  main.go
go/examples/05-pipe/: main.go
go/examples/06-matrix/: main.go
go/lib/darwin-arm64/: dxc
language/: language.go
test/: CMakeLists.txt  README_VIEWPORT_TESTS.md  mental_test_fork.h  test_buffer.c  test_clone.c  test_core.c  test_d3d12_direct.c  test_external_compilers.c  test_failures.c  test_hlsl_debug.c  test_hlsl_full.c  test_integration.c  test_kernel.c  test_metal_direct.c  test_monotonic.c  test_msl_debug.c  test_opencl_direct.c  test_paths_debug.c  test_ref.c  test_reference.c  test_shaders.c  test_spark.c  test_stdlink.c  test_stdrec.c  test_transpile.c  test_transpile_debug.c  test_viewport.c  test_viewport_readback_wasm.c  test_viewport_window_d3d12.c  test_viewport_window_metal.m  test_viewport_window_vulkan.c  test_vulkan_direct.c
transpile/: README.md  build_check.go  download.go  download_prebuilt.go  dxc.go  glslang.go  glslang_wrapper.cpp  glslang_wrapper.h  naga.go  spirv_cross.go  spirv_cross_wrapper.cpp  spirv_cross_wrapper.h  transpile.go
